goal-backend/deployment-v4.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: goal-backend-v4
  namespace: prod
spec:
  replicas: 2
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
         app: goal-backend
         version: v4
    spec:
      containers:
      - name: goal-backend
        image: cjvogel1972/goal-backend:0.0.4
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: goal-backend
    version: v4
  name: goal-backend-svc-v4
  namespace: prod
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: goal-backend
    version: v4
  type: ClusterIP
