goal-backend/route.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: goal-backend-gw
  namespace: prod
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "goal-backend.istio.toddelewis.net"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: goal-backend-vs
  namespace: prod
spec:
  hosts:
  - "goal-backend.istio.toddelewis.net"
  gateways:
  - goal-backend-gw
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        port:
          number: 80
        host: goal-backend-svc-v1
  - match:
    - headers:
        end-user:
          exact: freddy
    route:
    - destination:
        port:
          number: 80
        host: goal-backend-svc-v2
  - route:
    - destination:
        port:
          number: 80
        host: goal-backend-svc-v3
